<resources>
    <string name="app_name">Crazy Team 2</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_scrolling">"UIOWA CS Survey "</string>
    <string name="large_text">
        "Welcome to UIOWA CS Department !\n\n "
        "Thank you so much for your precious time ........\n\n"
        "This survey is about ......\n\n"
        "......more information about the survey\n\n......"
        "......\n\n"
        "......\n\n"
        "......\n\n"
        "......\n\n"
        "click the button below to enter the survey\n\n"
        "Optional: type your email address for a SECRET PRIZE DRAWING !!!\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="Q1">Do you smoke?</string>
    <string name="Q2">Do you drink?</string>
    <string name="Q3">How many hours sleep do you have everyday?</string>
    <string name="Answer_1">Yes</string>
    <string name="Answer_2">No</string>
    <string name="Answer_3">A little</string>
    <string name="button_next1">login</string>
    <string name="button_next2">next</string>
    <string name="button_next3">next</string>
    <string name="button_next4">next</string>
    <string name="button_next5">next</string>
    <string name="button_next6">next</string>
    <string name="SurveyInfo">Welcome</string>
    <string name="Survey1">Survey Page 1</string>
    <string name="Survey2">Survey Page 2</string>
    <string name="Survey3">Survey Page 3</string>
    <string name="sleep_hour1">less than 6 hours</string>
    <string name="sleep_hour2">Over 8 hours</string>
    <string name="Thankyou1">We thank you for your time spent taking this survey</string>
    <string name="Thankyou2">Your response has been recorded.</string>
    <string name="prizedraw">You can type your email below to enter a free prize drawing</string>
    <string name="button_submit">Submit</string>
    <string name="Q4">Why you choose Computer Science as your major?</string>
    <string name="AnswerBelow">Type your answer below</string>
    <string name="Q5">Which CS class you found interedting and why?</string>
    <string name="name">name</string>
    <string name="year">year</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="User_name">User Name</string>
    <string name="password">password</string>
    <string name="SurveySelect">Choose a survey you want to participate in</string>
    <string name="button_survey_again">Want to do one more?</string>
    <string name="lets_go">Let\'s go</string>
    <string name="radio1">Class Registration Survey</string>
    <string name="radio2">Campus Safety Survey</string>
    <string name="radio3">Health Insurance Survey</string>
    <string name="radio4">Career Survey</string>
    <string name="button_Register">Register</string>>
</resources>
